<resources>
    <string name="app_name">Aurislife</string>

    <string name="newpassword">New Password</string>
    <string name="confirm_pswd">Confirm Password</string>
    <string name="set_pswd">Set Password</string>
    <string name="phn_no">Phone Number</string>
    <string name="points">Your Points</string>
    <string name="password">Password</string>
    <string name="verify">Verify</string>
    <string name="send_otp">Send OTP</string>
    <string name="login">Login</string>
    <string name="signup">No account yet? Create one</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="capture_upld">Capture Or Upload Image</string>

    <string name="show_pswd">Show Password</string>
    <string name="add_referrer">Add Referrer</string>
    <string name="notification">Notifications</string>
    <string name="btn_signup">Create Account</string>
    <string name="pin">Enter your Pincode</string>
    <string name="ref_phn">Enter Referrer Phone Number</string>
    <string name="ten_digit_no">Enter 10 Digit Mobile Number</string>

    <string name="btn_member_login">Already a member? Login</string>
    <string name="rchrg_amnt">Recharge Amount</string>
    <string name="submit">Submit</string>
    <string name="youhaveslcted">You have selected </string>
    <string name="enter_rchrg_amnt">Enter your Recharge Amount </string>
    <string name="lesser_blnce">Your points are less than Your Request </string>
    <string name="success">Success</string>
    <string name="login_failed">Login failed</string>
    <string name="three_chrcter">at least 3 characters</string>
    <string name="no_transaction">There are no recharges!</string>
    <string name="no_prescription">You have not uploaded any Prescriptions</string>
    <string name="no_connection">You are not connected network</string>
    <string name="camera_not_support">Sorry! Your device doesnot support camera</string>
    <string name="user_cancelled">User cancelled image capture</string>
    <string name="user_cancelled_file_picker">User cancelled File chooser</string>
    <string name="file_picker_failed">Sorry! Failed to pick file</string>
    <string name="capture_failed">Sorry! Failed to capture image</string>
    <string name="item_select">"On Item Select : \n" </string>
    <string name="mismatch_pswd">"Password doesn't match" </string>
    <string name="take_a_pic">Take a Picture</string>
    <string name="pick_image">Pick an Image</string>
    <string name="pick_a_file">Select document</string>
    <string name="upload_img">Upload Image</string>
    <string name="upload_record">Upload Record</string>
    <string name="prec_details">Prescription Details</string>
    <string name="view_records">View my records</string>
    <string name="prec_status">PRESCRIPTION STATUS</string>
    <string name="enter_valid_email">enter a valid email address</string>
    <string name="button_forget_pswd">Forgot Password</string>


    <string name="prevw">Preview</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="upld_presc">Upload Prescription</string>
    <string name="upload_health_records">Upload EHR</string>
    <string name="presc_upld">Prescription upload</string>
    <string name="health_record_upload">Health record upload</string>
    <string name="uplding_prgrs">Uploading in progress</string>
    <string name="pres_upld_failed">Prescription Upload failed</string>
    <string name="pres_upld_success">Prescription Upload Success</string>
    <string name="health_record_upload_success">Health record upload success</string>
    <string name="upld_failed">Uploading failed</string>
    <string name="upld_finished">Uploading has finished</string>
    <string name="upld_starting">Upload starting</string>
    <string name="pres_upld_failed_bcoz_nw_issue">Prescription Upload failed because network issue, please reupload</string>
    <string name="health_report_upload_failed">Health report upload failed because network issue, please reupload</string>
    <string name="req_err">Request Error</string>
    <string name="prescrptn">Prescription</string>
    <string name="authenticating">Authenticating...</string>
    <string name="frgt_pswd">ForgetPassword</string>
    <string name="login_oprtn_call_finished">Login operation call finished</string>
    <string name="enter_otp">Enter Your OTP</string>


    <string name="currentpassword">Current Password</string>
    <string name="action_settings">Settings</string>
    <string name="otp_verification">Verify Phone Number</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="title_activity_transaction">Transaction</string>
    <string name="title_activity_recent_transactions">Recent Transactions</string>
    <string name="title_activity_priscription_details">Prescription Details</string>
    <string name="title_activity_splash_page">Aurislife</string>
    <string name="title_activity_uidtoken">Uidtoken</string>
    <string name="view_presc_details">Pull to view recent prescription uploads</string>
    <string name="view_ehr_details">Pull to view recent EHR uploads</string>
    <string name="view_priscription_details">Pull to view Prescription details</string>
    <string name="view_rcnt_transactions">Pull to view recent recharges</string>
    <string name="initializing">Initializing prescription upload</string>
    <string name="initializing_file_upload">Initializing file upload</string>
    <string name="take_photo">Select photo of your prescription first</string>
    <string name="choose_document_first">Choose a document first</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_forget_password">ForgotPassword</string>
    <string name="splash_text">Be part of India\'s first medical survey through mobile application conducted by Auris life and wellness foundation</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_otpverification">OTP</string>
    <string name="title_activity_compolsury_update">CompolsuryUpdate</string>
    <string name="title_activity_no_compulsary_update">NoCompulsaryUpdate</string>
    <string-array name="array_ehr_types">
        <item>Scanning</item>
        <item>Blood Test</item>
        <item>X-ray</item>
        <item>Lab Report</item>
        <item>Endoscopy</item>
        <item>Ultrasound</item>
    </string-array>

    <string-array name="district_selection">
        <item>Select your District</item>
        <item>Alappuzha</item>
        <item>Ernakulam</item>
        <item>Idukki</item>
        <item>Kannur</item>
        <item>Kasaragod</item>
        <item>Kollam</item>
        <item>Kottayam</item>
        <item>Kozhikode</item>
        <item>Malappuram</item>
        <item>Palakkad</item>
        <item>Pathanamthitta</item>
        <item>Thiruvananthapuram</item>
        <item>Thrissur</item>
        <item>Wayanad</item>
    </string-array>
    <string name="title_activity_health_record_detail_view">Health Record Details </string>
    <string name="title_activity_developer_info">Developer_info</string>

    <string name="file1"> <u>Download file 1</u></string>
</resources>
