<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/layout_interactive"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="72dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginBottom="24dp"-->
        <!--android:src="@drawable/logo_auris" />-->


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phn_no"
                android:inputType="phone"

                android:textColor="@color/primary_darker"
                android:textColorHint="@color/primary_darker" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"

                android:textColor="@color/primary_darker"
                android:textColorHint="@color/primary_darker" />
        </android.support.design.widget.TextInputLayout>

        <!--<CheckBox-->
        <!--android:id="@+id/checkBox_remember"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Remember me..." />-->

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="24dp"
            android:background="@color/primary"
            android:elevation="10dp"

            android:nestedScrollingEnabled="false"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/link_signup2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/primary_darker"
            android:textSize="16dip" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/primary"
            android:text="@string/button_forget_pswd"
            android:textColor="@color/white" />

    </LinearLayout>
    <!-- Email Label -->
    <ProgressBar
        android:id="@+id/progressBar_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_interactive"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>
