<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="in.gravitykerala.aurislife.OTPverification">

    <include layout="@layout/toolbar_default" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <!--<TextView-->
        <!--android:id="@+id/textView2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:text="Phone Number"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            android:text="@string/send_otp"
            android:textColor="@color/white" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_crnt_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/enter_otp"
                android:inputType="textPassword"
                android:textColor="@color/primary_darker" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            android:text="@string/verify"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>
