<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.gravitykerala.aurislife.Upload">

    <ScrollView
        android:id="@+id/scrollView_upload"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="3">


            <!-- Capture picture button -->

            <!-- Record video button -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnCapturePicture"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_a_file"
                    android:textColor="@color/white" />

                <!--<Button-->
                <!--android:id="@+id/btnRecordVideo"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Record a Video" />-->

                <LinearLayout
                    android:id="@+id/layout_recordDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView_filename"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:text="Filename"
                        android:textAppearance="?android:attr/textAppearanceMedium" />


                    <Spinner
                        android:id="@+id/spinnerHealthRecordType"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/array_ehr_types" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/editText_title"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="Record Title"
                            android:textColor="@color/primary_darker" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">


                    <EditText
                        android:id="@+id/editText_description"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Record description and remarks"
                        android:inputType="textMultiLine"
                        android:textColor="@color/primary_darker" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/editText_doctorName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Doctor name"
                        android:inputType="textPersonName"
                        android:textColor="@color/primary_darker" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/button_uploadpresc"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/upload_record"
                        android:textColor="@color/white" />

                </LinearLayout>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_records"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar_upload"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
